recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:5: error: reassignment to val
    steps = steps - 1
          ^